fix test issues + upgrade to jdk11 only -> simplify build script